<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyTwitter</string>
   
    <!-- StatusActivity screen -->
    <string name="titleStatus">Update Status</string>
    <string name="hintText">Please enter your status (up to 140 characters)</string>
    <string name="buttonUpdate">Update</string>
    
    <!-- Preferences screen -->
    <string name="titleUsername">Username</string>
    <string name="summaryUsername">Please enter your username</string>
    <string name="titlePassword">Password</string>
    <string name="summaryPassword">Please enter your password</string>
    <string name="titleApiRoot">API Root</string>
    <string name="summaryApiRoot">URL of Root API of your service</string>
    <string name="msgSetupPrefs">Setup your Preferences</string>
    <string name="msgLastTimelineUpdate">MyTwitter Widget</string>
    
    <!-- Timeline screen (whatever is launched in manifest is the title that shows up on App screen) -->
    <string name="titleTimeline">Tweet Timeline</string>
    
    <!-- Menu -->
    <string name="titlePrefs">Preferences</string>
    <string name="titleServiceStart">Start Tweet Updater</string>
    <string name="titleServiceStop">Stop Tweet Updater</string>
</resources>

<!-- API root: URL of the server you're connecting to -->